finalizing cubrt misalignment fix

--- a/style.css
+++ b/style.css
@@ -123,7 +123,7 @@ sup {
 }
 .cubrt-span {
     display: inline-block;
-    padding-top: .15vw;
+    padding-top: .2vw;
 }
 /* Background Animation */
 
